# face_detection

face-detection-cuda/: CMakeLists.txt  DetectFaces.cu  DetectFaces.hpp  ImageProcessing.hpp  IntegralImage.hpp  Makefile  WinInfo.cpp  WinInfo.hpp  cudaCheckError.hpp  cudaInclude.hpp  integralImage.cu  main.cpp
face-detection-cuda/Kernels/: ID_1.cu  ID_2.cu  ID_3.cu  ID_4.cu
face-detection-cuda/include/thrust/system/cuda/detail/detail/b40c/: radixsort_scanscatter_kernel.h  radixsort_spine_kernel.h
face-detection-cuda/src/: ImageProcessing.cpp  ImageProcessing.h  IntegralImage.cu  IntegralImage.h  WindowInfo.cpp  WindowInfo.h  cudaCheckError.cu  detectFaces.cu  detectFaces.h  main.cpp
face-detection-cuda/src/kernels/: ID1.cu  ID2.cu  ID3.cu  ID4.cu
