cmake_minimum_required(VERSION 2.8)
project(detect )

find_package(OpenCV REQUIRED)
find_package(CUDA REQUIRED)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    include/thrust/detail/allocator/malloc_allocator.h
    include/thrust/detail/allocator/no_throw_allocator.h
    include/thrust/detail/allocator/tagged_allocator.h
    include/thrust/detail/allocator/temporary_allocator.h
    include/thrust/detail/config/compiler.h
    include/thrust/detail/config/compiler_fence.h
    include/thrust/detail/config/config.h
    include/thrust/detail/config/debug.h
    include/thrust/detail/config/device_system.h
    include/thrust/detail/config/forceinline.h
    include/thrust/detail/config/host_device.h
    include/thrust/detail/config/host_system.h
    include/thrust/detail/config/simple_defines.h
    include/thrust/detail/dispatch/destroy.h
    include/thrust/detail/dispatch/is_trivial_copy.h
    include/thrust/detail/functional/operators/arithmetic_operators.h
    include/thrust/detail/functional/operators/assignment_operator.h
    include/thrust/detail/functional/operators/bitwise_operators.h
    include/thrust/detail/functional/operators/comma_operator.h
    include/thrust/detail/functional/operators/compound_assignment_operators.h
    include/thrust/detail/functional/operators/logical_operators.h
    include/thrust/detail/functional/operators/operator_adaptors.h
    include/thrust/detail/functional/operators/relational_operators.h
    include/thrust/detail/functional/actor.h
    include/thrust/detail/functional/argument.h
    include/thrust/detail/functional/composite.h
    include/thrust/detail/functional/operators.h
    include/thrust/detail/functional/placeholder.h
    include/thrust/detail/functional/value.h
    include/thrust/detail/mpl/math.h
    include/thrust/detail/type_traits/algorithm/intermediate_type_from_function_and_iterators.h
    include/thrust/detail/type_traits/iterator/is_discard_iterator.h
    include/thrust/detail/type_traits/iterator/is_output_iterator.h
    include/thrust/detail/type_traits/function_traits.h
    include/thrust/detail/type_traits/has_nested_type.h
    include/thrust/detail/type_traits/has_trivial_assign.h
    include/thrust/detail/type_traits/is_metafunction_defined.h
    include/thrust/detail/type_traits/minimum_type.h
    include/thrust/detail/type_traits/pointer_traits.h
    include/thrust/detail/type_traits/result_of.h
    include/thrust/detail/util/align.h
    include/thrust/detail/util/blocking.h
    include/thrust/detail/adl_helper.h
    include/thrust/detail/casts.h
    include/thrust/detail/config.h
    include/thrust/detail/contiguous_storage.h
    include/thrust/detail/copy.h
    include/thrust/detail/copy_if.h
    include/thrust/detail/cstdint.h
    include/thrust/detail/destroy.h
    include/thrust/detail/diagnostic.h
    include/thrust/detail/function.h
    include/thrust/detail/integer_traits.h
    include/thrust/detail/internal_functional.h
    include/thrust/detail/malloc_and_free_adl_helper.h
    include/thrust/detail/minmax.h
    include/thrust/detail/numeric_traits.h
    include/thrust/detail/overlapped_copy.h
    include/thrust/detail/pointer.h
    include/thrust/detail/raw_pointer_cast.h
    include/thrust/detail/raw_reference_cast.h
    include/thrust/detail/reference.h
    include/thrust/detail/reference_forward_declaration.h
    include/thrust/detail/static_assert.h
    include/thrust/detail/swap.h
    include/thrust/detail/temporary_array.h
    include/thrust/detail/trivial_sequence.h
    include/thrust/detail/tuple_meta_transform.h
    include/thrust/detail/tuple_transform.h
    include/thrust/detail/type_traits.h
    include/thrust/detail/use_default.h
    include/thrust/detail/vector_base.h
    include/thrust/iterator/detail/placement/is_placed.h
    include/thrust/iterator/detail/any_assign.h
    include/thrust/iterator/detail/any_system_tag.h
    include/thrust/iterator/detail/constant_iterator_base.h
    include/thrust/iterator/detail/device_system_tag.h
    include/thrust/iterator/detail/discard_iterator_base.h
    include/thrust/iterator/detail/distance_from_result.h
    include/thrust/iterator/detail/host_system_tag.h
    include/thrust/iterator/detail/is_iterator_category.h
    include/thrust/iterator/detail/is_trivial_iterator.h
    include/thrust/iterator/detail/iterator_adaptor_base.h
    include/thrust/iterator/detail/iterator_category_to_system.h
    include/thrust/iterator/detail/iterator_category_to_traversal.h
    include/thrust/iterator/detail/iterator_facade_category.h
    include/thrust/iterator/detail/iterator_traversal_tags.h
    include/thrust/iterator/detail/minimum_category.h
    include/thrust/iterator/detail/minimum_system.h
    include/thrust/iterator/detail/normal_iterator.h
    include/thrust/iterator/detail/permutation_iterator_base.h
    include/thrust/iterator/detail/retag.h
    include/thrust/iterator/detail/reverse_iterator_base.h
    include/thrust/iterator/detail/tagged_iterator.h
    include/thrust/iterator/detail/tuple_of_iterator_references.h
    include/thrust/iterator/detail/universal_categories.h
    include/thrust/iterator/detail/zip_iterator_base.h
    include/thrust/iterator/constant_iterator.h
    include/thrust/iterator/counting_iterator.h
    include/thrust/iterator/discard_iterator.h
    include/thrust/iterator/iterator_adaptor.h
    include/thrust/iterator/iterator_categories.h
    include/thrust/iterator/iterator_facade.h
    include/thrust/iterator/iterator_traits.h
    include/thrust/iterator/permutation_iterator.h
    include/thrust/iterator/retag.h
    include/thrust/iterator/reverse_iterator.h
    include/thrust/iterator/transform_iterator.h
    include/thrust/iterator/zip_iterator.h
    include/thrust/random/detail/linear_congruential_engine_discard.h
    include/thrust/random/detail/linear_feedback_shift_engine_wordmask.h
    include/thrust/random/detail/mod.h
    include/thrust/random/detail/random_core_access.h
    include/thrust/random/detail/xor_combine_engine_max.h
    include/thrust/random/discard_block_engine.h
    include/thrust/random/linear_congruential_engine.h
    include/thrust/random/linear_feedback_shift_engine.h
    include/thrust/random/normal_distribution.h
    include/thrust/random/subtract_with_carry_engine.h
    include/thrust/random/uniform_int_distribution.h
    include/thrust/random/uniform_real_distribution.h
    include/thrust/random/xor_combine_engine.h
    include/thrust/system/cpp/detail/dispatch/sort.h
    include/thrust/system/cpp/detail/adjacent_difference.h
    include/thrust/system/cpp/detail/algorithm.h
    include/thrust/system/cpp/detail/binary_search.h
    include/thrust/system/cpp/detail/copy.h
    include/thrust/system/cpp/detail/copy_if.h
    include/thrust/system/cpp/detail/extrema.h
    include/thrust/system/cpp/detail/find.h
    include/thrust/system/cpp/detail/for_each.h
    include/thrust/system/cpp/detail/malloc_and_free.h
    include/thrust/system/cpp/detail/merge.h
    include/thrust/system/cpp/detail/partition.h
    include/thrust/system/cpp/detail/reduce.h
    include/thrust/system/cpp/detail/reduce_by_key.h
    include/thrust/system/cpp/detail/remove.h
    include/thrust/system/cpp/detail/scan.h
    include/thrust/system/cpp/detail/scan_by_key.h
    include/thrust/system/cpp/detail/set_operations.h
    include/thrust/system/cpp/detail/sort.h
    include/thrust/system/cpp/detail/tag.h
    include/thrust/system/cpp/detail/unique.h
    include/thrust/system/cpp/detail/unique_by_key.h
    include/thrust/system/cpp/memory.h
    include/thrust/system/cpp/vector.h
    include/thrust/system/cuda/detail/block/copy.h
    include/thrust/system/cuda/detail/block/inclusive_scan.h
    include/thrust/system/cuda/detail/block/merge.h
    include/thrust/system/cuda/detail/block/merging_sort.h
    include/thrust/system/cuda/detail/block/odd_even_sort.h
    include/thrust/system/cuda/detail/block/reduce.h
    include/thrust/system/cuda/detail/block/set_difference.h
    include/thrust/system/cuda/detail/block/set_intersection.h
    include/thrust/system/cuda/detail/block/set_symmetric_difference.h
    include/thrust/system/cuda/detail/block/set_union.h
    include/thrust/system/cuda/detail/detail/b40c/kernel_utils.h
    include/thrust/system/cuda/detail/detail/b40c/radixsort_api.h
    include/thrust/system/cuda/detail/detail/b40c/radixsort_kernel_common.h
    include/thrust/system/cuda/detail/detail/b40c/radixsort_key_conversion.h
    include/thrust/system/cuda/detail/detail/b40c/radixsort_reduction_kernel.h
    include/thrust/system/cuda/detail/detail/b40c/radixsort_scanscatter_kernel.h
    include/thrust/system/cuda/detail/detail/b40c/radixsort_spine_kernel.h
    include/thrust/system/cuda/detail/detail/b40c/vector_types.h
    include/thrust/system/cuda/detail/detail/fast_scan.h
    include/thrust/system/cuda/detail/detail/get_set_operation_splitter_ranks.h
    include/thrust/system/cuda/detail/detail/launch_calculator.h
    include/thrust/system/cuda/detail/detail/launch_closure.h
    include/thrust/system/cuda/detail/detail/rank_iterator.h
    include/thrust/system/cuda/detail/detail/set_operation.h
    include/thrust/system/cuda/detail/detail/split_for_set_operation.h
    include/thrust/system/cuda/detail/detail/stable_merge_sort.h
    include/thrust/system/cuda/detail/detail/stable_radix_sort.h
    include/thrust/system/cuda/detail/scalar/rotate.h
    include/thrust/system/cuda/detail/adjacent_difference.h
    include/thrust/system/cuda/detail/algorithm.h
    include/thrust/system/cuda/detail/arch.h
    include/thrust/system/cuda/detail/copy.h
    include/thrust/system/cuda/detail/copy_cross_system.h
    include/thrust/system/cuda/detail/copy_device_to_device.h
    include/thrust/system/cuda/detail/copy_if.h
    include/thrust/system/cuda/detail/default_decomposition.h
    include/thrust/system/cuda/detail/extern_shared_ptr.h
    include/thrust/system/cuda/detail/fill.h
    include/thrust/system/cuda/detail/for_each.h
    include/thrust/system/cuda/detail/guarded_cuda_runtime_api.h
    include/thrust/system/cuda/detail/malloc_and_free.h
    include/thrust/system/cuda/detail/merge.h
    include/thrust/system/cuda/detail/reduce.h
    include/thrust/system/cuda/detail/reduce_by_key.h
    include/thrust/system/cuda/detail/reduce_intervals.h
    include/thrust/system/cuda/detail/scan.h
    include/thrust/system/cuda/detail/set_operations.h
    include/thrust/system/cuda/detail/sort.h
    include/thrust/system/cuda/detail/synchronize.h
    include/thrust/system/cuda/detail/tag.h
    include/thrust/system/cuda/detail/trivial_copy.h
    include/thrust/system/cuda/experimental/pinned_allocator.h
    include/thrust/system/cuda/error.h
    include/thrust/system/cuda/memory.h
    include/thrust/system/cuda/vector.h
    include/thrust/system/detail/generic/scalar/binary_search.h
    include/thrust/system/detail/generic/scalar/select.h
    include/thrust/system/detail/generic/adjacent_difference.h
    include/thrust/system/detail/generic/advance.h
    include/thrust/system/detail/generic/binary_search.h
    include/thrust/system/detail/generic/copy.h
    include/thrust/system/detail/generic/copy_if.h
    include/thrust/system/detail/generic/count.h
    include/thrust/system/detail/generic/distance.h
    include/thrust/system/detail/generic/equal.h
    include/thrust/system/detail/generic/extrema.h
    include/thrust/system/detail/generic/fill.h
    include/thrust/system/detail/generic/find.h
    include/thrust/system/detail/generic/for_each.h
    include/thrust/system/detail/generic/gather.h
    include/thrust/system/detail/generic/generate.h
    include/thrust/system/detail/generic/inner_product.h
    include/thrust/system/detail/generic/logical.h
    include/thrust/system/detail/generic/memory.h
    include/thrust/system/detail/generic/merge.h
    include/thrust/system/detail/generic/mismatch.h
    include/thrust/system/detail/generic/partition.h
    include/thrust/system/detail/generic/reduce.h
    include/thrust/system/detail/generic/reduce_by_key.h
    include/thrust/system/detail/generic/remove.h
    include/thrust/system/detail/generic/replace.h
    include/thrust/system/detail/generic/reverse.h
    include/thrust/system/detail/generic/scan.h
    include/thrust/system/detail/generic/scan_by_key.h
    include/thrust/system/detail/generic/scatter.h
    include/thrust/system/detail/generic/select_system.h
    include/thrust/system/detail/generic/sequence.h
    include/thrust/system/detail/generic/set_operations.h
    include/thrust/system/detail/generic/sort.h
    include/thrust/system/detail/generic/swap_ranges.h
    include/thrust/system/detail/generic/tag.h
    include/thrust/system/detail/generic/transform.h
    include/thrust/system/detail/generic/transform_reduce.h
    include/thrust/system/detail/generic/transform_scan.h
    include/thrust/system/detail/generic/type_traits.h
    include/thrust/system/detail/generic/uninitialized_copy.h
    include/thrust/system/detail/generic/uninitialized_fill.h
    include/thrust/system/detail/generic/unique.h
    include/thrust/system/detail/generic/unique_by_key.h
    include/thrust/system/detail/internal/scalar/adjacent_difference.h
    include/thrust/system/detail/internal/scalar/binary_search.h
    include/thrust/system/detail/internal/scalar/copy.h
    include/thrust/system/detail/internal/scalar/copy_backward.h
    include/thrust/system/detail/internal/scalar/copy_if.h
    include/thrust/system/detail/internal/scalar/extrema.h
    include/thrust/system/detail/internal/scalar/find.h
    include/thrust/system/detail/internal/scalar/for_each.h
    include/thrust/system/detail/internal/scalar/general_copy.h
    include/thrust/system/detail/internal/scalar/insertion_sort.h
    include/thrust/system/detail/internal/scalar/merge.h
    include/thrust/system/detail/internal/scalar/partition.h
    include/thrust/system/detail/internal/scalar/reduce.h
    include/thrust/system/detail/internal/scalar/reduce_by_key.h
    include/thrust/system/detail/internal/scalar/remove.h
    include/thrust/system/detail/internal/scalar/scan.h
    include/thrust/system/detail/internal/scalar/scan_by_key.h
    include/thrust/system/detail/internal/scalar/set_operations.h
    include/thrust/system/detail/internal/scalar/sort.h
    include/thrust/system/detail/internal/scalar/stable_merge_sort.h
    include/thrust/system/detail/internal/scalar/stable_radix_sort.h
    include/thrust/system/detail/internal/scalar/trivial_copy.h
    include/thrust/system/detail/internal/scalar/unique.h
    include/thrust/system/detail/internal/scalar/unique_by_key.h
    include/thrust/system/detail/internal/decompose.h
    include/thrust/system/detail/bad_alloc.h
    include/thrust/system/detail/errno.h
    include/thrust/system/omp/detail/adjacent_difference.h
    include/thrust/system/omp/detail/algorithm.h
    include/thrust/system/omp/detail/binary_search.h
    include/thrust/system/omp/detail/copy.h
    include/thrust/system/omp/detail/copy_if.h
    include/thrust/system/omp/detail/default_decomposition.h
    include/thrust/system/omp/detail/extrema.h
    include/thrust/system/omp/detail/find.h
    include/thrust/system/omp/detail/for_each.h
    include/thrust/system/omp/detail/partition.h
    include/thrust/system/omp/detail/reduce.h
    include/thrust/system/omp/detail/reduce_by_key.h
    include/thrust/system/omp/detail/reduce_intervals.h
    include/thrust/system/omp/detail/remove.h
    include/thrust/system/omp/detail/sort.h
    include/thrust/system/omp/detail/tag.h
    include/thrust/system/omp/detail/unique.h
    include/thrust/system/omp/detail/unique_by_key.h
    include/thrust/system/omp/memory.h
    include/thrust/system/omp/vector.h
    include/thrust/system/tbb/detail/algorithm.h
    include/thrust/system/tbb/detail/copy.h
    include/thrust/system/tbb/detail/copy_if.h
    include/thrust/system/tbb/detail/for_each.h
    include/thrust/system/tbb/detail/merge.h
    include/thrust/system/tbb/detail/reduce.h
    include/thrust/system/tbb/detail/scan.h
    include/thrust/system/tbb/detail/sort.h
    include/thrust/system/tbb/detail/tag.h
    include/thrust/system/tbb/memory.h
    include/thrust/system/tbb/vector.h
    include/thrust/system/cuda_error.h
    include/thrust/system/error_code.h
    include/thrust/system/system_error.h
    include/thrust/adjacent_difference.h
    include/thrust/advance.h
    include/thrust/binary_search.h
    include/thrust/copy.h
    include/thrust/count.h
    include/thrust/device_allocator.h
    include/thrust/device_delete.h
    include/thrust/device_free.h
    include/thrust/device_malloc.h
    include/thrust/device_malloc_allocator.h
    include/thrust/device_new.h
    include/thrust/device_new_allocator.h
    include/thrust/device_ptr.h
    include/thrust/device_reference.h
    include/thrust/device_vector.h
    include/thrust/distance.h
    include/thrust/equal.h
    include/thrust/extrema.h
    include/thrust/fill.h
    include/thrust/find.h
    include/thrust/for_each.h
    include/thrust/functional.h
    include/thrust/gather.h
    include/thrust/generate.h
    include/thrust/host_vector.h
    include/thrust/inner_product.h
    include/thrust/logical.h
    include/thrust/memory.h
    include/thrust/merge.h
    include/thrust/mismatch.h
    include/thrust/pair.h
    include/thrust/partition.h
    include/thrust/random.h
    include/thrust/reduce.h
    include/thrust/remove.h
    include/thrust/replace.h
    include/thrust/reverse.h
    include/thrust/scan.h
    include/thrust/scatter.h
    include/thrust/sequence.h
    include/thrust/set_operations.h
    include/thrust/sort.h
    include/thrust/swap.h
    include/thrust/system_error.h
    include/thrust/transform.h
    include/thrust/transform_reduce.h
    include/thrust/transform_scan.h
    include/thrust/tuple.h
    include/thrust/uninitialized_copy.h
    include/thrust/uninitialized_fill.h
    include/thrust/unique.h
    include/thrust/version.h
        src/kernels/ID1.cu
        src/kernels/ID2.cu
        src/kernels/ID3.cu
        src/kernels/ID4.cu
        src/detectFaces.cu
        src/detectFaces.h
        src/cudaCheckError.cu
        src/IntegralImage.cu
        src/IntegralImage.h
    src/main.cpp
        src/WindowInfo.cpp
        src/WindowInfo.h
        src/ImageProcessing.h
        src/ImageProcessing.cpp)

cuda_add_executable(detect ${SOURCE_FILES})

target_link_libraries(detect ${OpenCV_LIBS})